fixed social media icons alignment issue in the footer

--- a/sites/all/themes/prevsol/scss/_overrides.scss
+++ b/sites/all/themes/prevsol/scss/_overrides.scss
@@ -520,6 +520,9 @@ a {
 }
 
 #block-followusfooter {
+  & > .field--name-body > p {
+    display: flex;
+  }
   h2.block-title {
     color: $white;
     font-size: 1.8rem;
